<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.akhil.weather.forecast.view.MainActivity">
    <RelativeLayout
        android:id="@+id/head"
        android:layout_width="match_parent" android:layout_height="100dp"
        android:background="@color/colorPrimary">

        <ImageView
            android:layout_width="75dp"
            android:layout_height="100dp"
            app:srcCompat="@drawable/yahoologo_new"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:id="@+id/imageView"
            android:contentDescription="@string/header_text"/>
        <TextView
            android:id="@+id/headerTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/header_text"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:textSize="15sp"
            android:lines="1"
            android:typeface="serif"
            android:textColor="@android:color/white"
            android:textStyle="bold"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/city"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            android:textSize="20sp"
            android:textStyle="bold|italic"
            android:typeface="sans"
            android:textColor="@color/cityTextColor"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fahrenheit"
            android:layout_alignParentRight="true"
            android:layout_marginRight="40dp"
            android:layout_marginTop="10dp"
            android:textSize="30sp"
            android:textColor="@android:color/white"
            android:typeface="sans"
            android:textStyle="bold"/>
    </RelativeLayout>
    <fragment
        android:id="@+id/listFragment"
        android:tag="@string/fragment_tag"
        android:layout_below="@id/head"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:name="com.akhil.weather.forecast.view.ForecastListFragment"
        tools:layout="@layout/forecast_list_fragment"/>

</RelativeLayout>
