<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent" android:layout_height="100dp"
    android:background="@color/colorPrimary">

    <ImageView
        android:layout_width="75dp"
        android:layout_height="100dp"
        app:srcCompat="@drawable/yahoologo_new"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/imageView"
        android:contentDescription="@string/header_text"/>
    <TextView
        android:id="@+id/headerTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/header_text"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:textSize="16sp"
        android:lines="1"
        android:typeface="serif"
        android:textColor="@android:color/white"
        android:textStyle="bold"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/city"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:textSize="22sp"
        android:textStyle="bold|italic"
        android:typeface="sans"
        android:textColor="@color/cityTextColor"
        android:lines="1"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fahrenheit"
        android:layout_alignParentRight="true"
        android:layout_marginRight="40dp"
        android:layout_marginTop="10dp"
        android:textSize="30sp"
        android:textColor="@android:color/white"
        android:typeface="sans"
        android:textStyle="bold"
        android:lines="1"/>
</RelativeLayout>