<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">
    <RelativeLayout
        android:id="@+id/dateLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="@dimen/date_left_margin"
        android:layout_marginTop="@dimen/top_margin">
        <TextView
            android:id="@+id/dateText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date"
            android:textSize="@dimen/date_header_text_size"
            android:typeface="serif"
            android:lines="1"
            android:textStyle="bold"
            android:textColor="@color/colorPrimary"/>
        <TextView
            android:id="@+id/date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/dateText"
            android:lines="1"
            android:text="@string/dummy_date"
            android:textColor="@color/colorAccent"
            android:layout_marginTop="@dimen/date_text_top_margin"
            android:textSize="@dimen/date_text_size"
            android:typeface="serif"
            android:textStyle="italic"/>
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/tempLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/top_margin"
        android:layout_alignParentRight="true">
        <RelativeLayout
            android:id="@+id/maxLayout"
            android:layout_width="@dimen/temp_layout_width"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/maxTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/date_header_text_size"
                android:text="@string/max"
                android:textColor="@color/colorPrimary"
                android:typeface="serif"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/max"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dummy_number"
                android:textSize="@dimen/temp_text_size"
                android:typeface="serif"
                android:textStyle="italic"
                android:textColor="@color/colorAccent"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"/>
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/minLayout"
            android:layout_width="@dimen/temp_layout_width"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/date_text_top_margin"
            android:layout_marginRight="@dimen/temp_layout_right_margin"
            android:layout_below="@id/maxLayout">
            <TextView
                android:id="@+id/minTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/min"
                android:textSize="@dimen/date_header_text_size"
                android:textColor="@color/colorPrimary"
                android:typeface="serif"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/min"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dummy_number"
                android:textSize="@dimen/temp_text_size"
                android:textStyle="italic"
                android:textColor="@color/colorAccent"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"/>
        </RelativeLayout>
    </RelativeLayout>
</RelativeLayout>